# oxidize_server

./: .gitignore  .gitmodules  Cargo.toml  build.rs
proto/: route.proto
src/: crypto.rs  database.rs  lib.rs  main.rs
src/chat/: mod.rs  msg.rs
