[package]
name = "oxidize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.1", features = ["aes", "alloc", "getrandom", "zeroize"]}
rand_chacha = "0.3.1"
rpassword = "7.2.0"
tokio = { version = "1.24.2", features = ["full"] }
rust-argon2 = "1.0"
rand = "0.8.5"
rand_core = "0.6.4"
rsa = { version = "0.8.1", features = ["default", "pkcs5", "sha2"] }
der = "0.6.1"
